# MaaAssistantArknights

./: .clangd  CHANGELOG.md  CMakePresets.json  README.md
.claude/skills/maa-issue-log-analysis/: SKILL.md
.claude/skills/pallas-style-reply/: SKILL.md
.devin/: wiki.json
.github/workflows/: ci.yml  discord-release-notification.yml  issue-ai-analysis.yml  pre-commit-scheduled.yml  release-nightly-ota.yml  release-ota.yml  release-preparation.yml  unit-tests.yml  website-workflow.yml
docs/: package.json  pnpm-lock.yaml
docs/en-us/develop/: development.md
docs/en-us/manual/: faq.md  newbie.md
docs/en-us/protocol/: integration.md
docs/ja-jp/develop/: development.md
docs/ja-jp/manual/: faq.md  newbie.md
docs/ja-jp/protocol/: integration.md
docs/ko-kr/develop/: development.md
docs/ko-kr/manual/: faq.md  newbie.md
docs/zh-cn/develop/: development.md
docs/zh-cn/manual/: faq.md  install.md
docs/zh-cn/protocol/: integration.md
docs/zh-tw/develop/: development.md
docs/zh-tw/manual/: faq.md  newbie.md
docs/zh-tw/protocol/: integration.md
resource/: config.json
resource/tasks/: tasks.json
resource/tasks/MiniGame/: SPA.json
resource/tasks/Stages/: PA.json
src/MaaCore/: CMakeLists.txt
src/MaaWpfGui/: MaaWpfGui.csproj  NativeMethods.txt
tests/: CMakeLists.txt  compile_flags.txt  test-suites.json
tests/MaaCore/: AlgorithmTest.cpp
tools/: DependencySetup_依赖库安装.bat  local-install.bat
tools/OptimizeTemplates/: optimize_templates.json
tools/ResourceUpdater/: main.cpp
unit_test/: test-suites.json
unit_test/MaaCore/: AlgorithmTest.cpp
(+154 files in other folders)
